Добавлены новые документы и инструкции по настройке, использованию и тестированию SSL сертификатов Let's Encrypt с использованием API reg.ru. Обновлены зависимости в requirements.txt для поддержки новых функций. Включены подробные шаги по автоматизации, созданию и продлению сертификатов, а также интеграции с Nginx Proxy Manager.

--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,13 @@ PIPE_MANIFEST
 *.manifest
 *.spec
 
+# PyInstaller build artifacts
+build/
+dist/
+*.tar.gz
+*.zip
+*.sha256
+
 # Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
